new my projects page, put projects there, made the public page only published projects, fixed some security issues

--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -8,7 +8,7 @@
 		</ul>
 		<hr>
 		<ul class="list-unstyled">
-			<li><a href ui-sref="activities">My List</a></li>
+			<li><a href ui-sref="activities">My Projects</a></li>
 		</ul>
 	</div>
 
